triton_backend_sys/src/bindings.rs

extern "C" {
    #[doc = " Get model used to produce a response. The caller does not own the\n returned model name value and must not modify or delete it. The\n lifetime of all returned values extends until 'inference_response'\n is deleted.\n\n \\param inference_response The response object.\n \\param model_name Returns the name of the model.\n \\param model_version Returns the version of the model.\n this response.\n \\return a TRITONSERVER_Error indicating success or failure."]
    pub fn TRITONSERVER_InferenceResponseModel(
        inference_response: *mut TRITONSERVER_InferenceResponse,
        model_name: *mut *const ::std::os::raw::c_char,
        model_version: *mut i64,
    ) -> *mut TRITONSERVER_Error;
}
extern "C" {
    #[doc = " Get the ID of the request corresponding to a response. The caller\n does not own the returned ID and must not modify or delete it. The\n lifetime of all returned values extends until 'inference_response'\n is deleted.\n\n \\param inference_response The response object.\n \\param request_id Returns the ID of the request corresponding to\n this response.\n \\return a TRITONSERVER_Error indicating success or failure."]
    pub fn TRITONSERVER_InferenceResponseId(
        inference_response: *mut TRITONSERVER_InferenceResponse,
        request_id: *mut *const ::std::os::raw::c_char,
    ) -> *mut TRITONSERVER_Error;
}
extern "C" {
    #[doc = " Get the number of parameters available in the response.\n\n \\param inference_response The response object.\n \\param count Returns the number of parameters.\n \\return a TRITONSERVER_Error indicating success or failure."]
    pub fn TRITONSERVER_InferenceResponseParameterCount(
        inference_response: *mut TRITONSERVER_InferenceResponse,
        count: *mut u32,
    ) -> *mut TRITONSERVER_Error;
}
extern "C" {
    #[doc = " Get all information about a parameter. The caller does not own any\n of the returned values and must not modify or delete them. The\n lifetime of all returned values extends until 'inference_response'\n is deleted.\n\n The 'vvalue' returns a void* pointer that must be cast\n appropriately based on 'type'. For example:\n\n   void* vvalue;\n   TRITONSERVER_ParameterType type;\n   TRITONSERVER_InferenceResponseParameter(\n                     response, index, &name, &type, &vvalue);\n   switch (type) {\n     case TRITONSERVER_PARAMETER_BOOL:\n       bool value = *(reinterpret_cast<bool*>(vvalue));\n       ...\n     case TRITONSERVER_PARAMETER_INT:\n       int64_t value = *(reinterpret_cast<int64_t*>(vvalue));\n       ...\n     case TRITONSERVER_PARAMETER_STRING:\n       const char* value = reinterpret_cast<const char*>(vvalue);\n       ...\n\n \\param inference_response The response object.\n \\param index The index of the parameter, must be 0 <= index <\n count, where 'count' is the value returned by\n TRITONSERVER_InferenceResponseParameterCount.\n \\param name Returns the name of the parameter.\n \\param type Returns the type of the parameter.\n \\param vvalue Returns a pointer to the parameter value.\n \\return a TRITONSERVER_Error indicating success or failure."]
    pub fn TRITONSERVER_InferenceResponseParameter(
        inference_response: *mut TRITONSERVER_InferenceResponse,
        index: u32,
        name: *mut *const ::std::os::raw::c_char,
        type_: *mut TRITONSERVER_ParameterType,
        vvalue: *mut *const ::std::os::raw::c_void,
    ) -> *mut TRITONSERVER_Error;
}
extern "C" {
    #[doc = " Get the number of outputs available in the response.\n\n \\param inference_response The response object.\n \\param count Returns the number of output tensors.\n \\return a TRITONSERVER_Error indicating success or failure."]
    pub fn TRITONSERVER_InferenceResponseOutputCount(
        inference_response: *mut TRITONSERVER_InferenceResponse,
        count: *mut u32,
    ) -> *mut TRITONSERVER_Error;
}
extern "C" {
    #[doc = " Get all information about an output tensor.  The tensor data is\n returned as the base pointer to the data and the size, in bytes,\n of the data. The caller does not own any of the returned values\n and must not modify or delete them. The lifetime of all returned\n values extends until 'inference_response' is deleted.\n\n \\param inference_response The response object.\n \\param index The index of the output tensor, must be 0 <= index <\n count, where 'count' is the value returned by\n TRITONSERVER_InferenceResponseOutputCount.\n \\param name Returns the name of the output.\n \\param datatype Returns the type of the output.\n \\param shape Returns the shape of the output.\n \\param dim_count Returns the number of dimensions of the returned\n shape.\n \\param base Returns the tensor data for the output.\n \\param byte_size Returns the size, in bytes, of the data.\n \\param memory_type Returns the memory type of the data.\n \\param memory_type_id Returns the memory type id of the data.\n \\param userp The user-specified value associated with the buffer\n in TRITONSERVER_ResponseAllocatorAllocFn_t.\n \\return a TRITONSERVER_Error indicating success or failure."]
    pub fn TRITONSERVER_InferenceResponseOutput(
        inference_response: *mut TRITONSERVER_InferenceResponse,
        index: u32,
        name: *mut *const ::std::os::raw::c_char,
        datatype: *mut TRITONSERVER_DataType,
        shape: *mut *const i64,
        dim_count: *mut u64,
        base: *mut *const ::std::os::raw::c_void,
        byte_size: *mut usize,
        memory_type: *mut TRITONSERVER_MemoryType,
        memory_type_id: *mut i64,
        userp: *mut *mut ::std::os::raw::c_void,
    ) -> *mut TRITONSERVER_Error;
}
extern "C" {
    #[doc = " Get a classification label associated with an output for a given\n index.  The caller does not own the returned label and must not\n modify or delete it. The lifetime of all returned label extends\n until 'inference_response' is deleted.\n\n \\param inference_response The response object.\n \\param index The index of the output tensor, must be 0 <= index <\n count, where 'count' is the value returned by\n TRITONSERVER_InferenceResponseOutputCount.\n \\param class_index The index of the class.\n \\param name Returns the label corresponding to 'class_index' or\n nullptr if no label.\n \\return a TRITONSERVER_Error indicating success or failure."]
    pub fn TRITONSERVER_InferenceResponseOutputClassificationLabel(
        inference_response: *mut TRITONSERVER_InferenceResponse,
        index: u32,
        class_index: usize,
        label: *mut *const ::std::os::raw::c_char,
    ) -> *mut TRITONSERVER_Error;
}
extern "C" {
    #[doc = " Create a new buffer attributes object. The caller takes ownership of\n the TRITONSERVER_BufferAttributes object and must call\n TRITONSERVER_BufferAttributesDelete to release the object.\n\n \\param buffer_attributes Returns the new buffer attributes object.\n \\return a TRITONSERVER_Error indicating success or failure."]
    pub fn TRITONSERVER_BufferAttributesNew(
        buffer_attributes: *mut *mut TRITONSERVER_BufferAttributes,
    ) -> *mut TRITONSERVER_Error;
}
extern "C" {
    #[doc = " Delete a buffer attributes object.\n\n \\param buffer_attributes The buffer_attributes object.\n \\return a TRITONSERVER_Error indicating success or failure."]
    pub fn TRITONSERVER_BufferAttributesDelete(
        buffer_attributes: *mut TRITONSERVER_BufferAttributes,
    ) -> *mut TRITONSERVER_Error;
}
extern "C" {
    #[doc = " Set the memory type id field of the buffer attributes.\n\n \\param buffer_attributes The buffer attributes object.\n \\param memory_type_id Memory type id to assign to the buffer attributes\n object.\n \\return a TRITONSERVER_Error indicating success or failure."]
    pub fn TRITONSERVER_BufferAttributesSetMemoryTypeId(
        buffer_attributes: *mut TRITONSERVER_BufferAttributes,
        memory_type_id: i64,
    ) -> *mut TRITONSERVER_Error;
}
extern "C" {
    #[doc = " Set the memory type field of the buffer attributes.\n\n \\param buffer_attributes The buffer attributes object.\n \\param memory_type Memory type to assign to the buffer attributes object.\n \\return a TRITONSERVER_Error indicating success or failure."]
    pub fn TRITONSERVER_BufferAttributesSetMemoryType(
        buffer_attributes: *mut TRITONSERVER_BufferAttributes,
        memory_type: TRITONSERVER_MemoryType,
    ) -> *mut TRITONSERVER_Error;
}
extern "C" {
    #[doc = " Set the CudaIpcHandle field of the buffer attributes.\n\n \\param buffer_attributes The buffer attributes object.\n \\param cuda_ipc_handle The CudaIpcHandle to assign to the buffer attributes\n object.\n \\return a TRITONSERVER_Error indicating success or failure."]
    pub fn TRITONSERVER_BufferAttributesSetCudaIpcHandle(
        buffer_attributes: *mut TRITONSERVER_BufferAttributes,
        cuda_ipc_handle: *mut ::std::os::raw::c_void,
    ) -> *mut TRITONSERVER_Error;
}
extern "C" {
    #[doc = " Set the byte size field of the buffer attributes.\n\n \\param buffer_attributes The buffer attributes object.\n \\param byte_size Byte size to assign to the buffer attributes object.\n \\return a TRITONSERVER_Error indicating success or failure."]
    pub fn TRITONSERVER_BufferAttributesSetByteSize(
        buffer_attributes: *mut TRITONSERVER_BufferAttributes,
        byte_size: usize,
    ) -> *mut TRITONSERVER_Error;
}
extern "C" {
    #[doc = " Get the memory type id field of the buffer attributes.\n\n \\param buffer_attributes The buffer attributes object.\n \\param memory_type_id Returns the memory type id associated with the buffer\n attributes object.\n \\return a TRITONSERVER_Error indicating success or failure."]
    pub fn TRITONSERVER_BufferAttributesMemoryTypeId(
        buffer_attributes: *mut TRITONSERVER_BufferAttributes,
        memory_type_id: *mut i64,
    ) -> *mut TRITONSERVER_Error;
}
extern "C" {
    #[doc = " Get the memory type field of the buffer attributes.\n\n \\param buffer_attributes The buffer attributes object.\n \\param memory_type Returns the memory type associated with the buffer\n attributes object.\n \\return a TRITONSERVER_Error indicating success or failure."]
    pub fn TRITONSERVER_BufferAttributesMemoryType(
        buffer_attributes: *mut TRITONSERVER_BufferAttributes,
        memory_type: *mut TRITONSERVER_MemoryType,
    ) -> *mut TRITONSERVER_Error;
}
extern "C" {
    #[doc = " Get the CudaIpcHandle field of the buffer attributes object.\n\n \\param buffer_attributes The buffer attributes object.\n \\param cuda_ipc_handle Returns the memory type associated with the buffer\n attributes object. If the cudaIpcHandle does not exist for the buffer,\n nullptr will be returned.\n \\return a TRITONSERVER_Error indicating success or failure."]
    pub fn TRITONSERVER_BufferAttributesCudaIpcHandle(
        buffer_attributes: *mut TRITONSERVER_BufferAttributes,
        cuda_ipc_handle: *mut *mut ::std::os::raw::c_void,
    ) -> *mut TRITONSERVER_Error;
}
extern "C" {
    #[doc = " Get the byte size field of the buffer attributes.\n\n \\param buffer_attributes The buffer attributes object.\n \\param byte_size Returns the byte size associated with the buffer attributes\n object.\n \\return a TRITONSERVER_Error indicating success or failure."]
    pub fn TRITONSERVER_BufferAttributesByteSize(
        buffer_attributes: *mut TRITONSERVER_BufferAttributes,
        byte_size: *mut usize,
    ) -> *mut TRITONSERVER_Error;
}
